--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
   <script src="compiled/src/components/VideoList.js"></script>
   <script src="compiled/src/components/VideoPlayer.js"></script>
   <script src="compiled/src/components/Search.js"></script>
+  <script src="compiled/src/config/youtube.js"></script>
+  <script src="compiled/src/lib/searchYouTube.js"></script>
   <script src="compiled/src/components/App.js"></script>
   <script src="compiled/src/index.js"></script>
 </body>
